feat: Add base parser/lexer (#3)
Still missing inductives and proper parsing for application.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,6 +29,8 @@ jobs:
         with:
           ocaml-compiler: ${{ matrix.ocaml-compiler }}
 
+      - run: opam install menhir stdio # is this really necessary?
+
       - run: opam install . --deps-only --with-test
 
       - run: opam exec -- dune build
