--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "scripts": {
     "watch": "dune build -w",
     "test": "dune runtest",
+    "coverage": "dune runtest --instrument-with bisect_ppx --force; bisect-ppx-report html",
     "run": "dune exec gcic"
   },
   "dependencies": {
@@ -13,7 +14,9 @@
   "devDependencies": {
       "@opam/merlin": "*",
       "@opam/ocamlformat": "^0.21",
-      "@opam/ocaml-lsp-server": "^1.10.5"
+      "@opam/ocaml-lsp-server": "^1.10.5",
+      "@opam/bisect_ppx": "^2.8.1",
+      "@opam/ppx_jane": "*"
   }
 
 }
