--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "@opam/menhir": "*"
   },
   "devDependencies": {
-      "@opam/merlin": "*",
+      "@opam/easy-format": "1.3.2",
+      "@opam/merlin": "*", 
       "@opam/ocamlformat": "^0.21",
       "@opam/ocaml-lsp-server": "^1.10.5",
       "@opam/bisect_ppx": "^2.8.1",
-      "@opam/ppx_jane": "^v0.14.0"
+      "@opam/ppx_jane": "*"
   }
 
 }
