config: Add patdiff for better outputs

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
       "@opam/ocamlformat": "^0.21",
       "@opam/ocaml-lsp-server": "^1.10.5",
       "@opam/bisect_ppx": "^2.8.1",
-      "@opam/ppx_jane": "*"
+      "@opam/ppx_jane": "*",
+      "@opam/patdiff": "*"
   }
 
 }
