--- a/package.json
+++ b/package.json
@@ -13,16 +13,15 @@
     "@opam/menhir": "*"
   },
   "devDependencies": {
-      "@opam/easy-format": "1.3.2",
-      "@opam/merlin": "*", 
-      "@opam/ocamlformat": "^0.21",
-      "@opam/ocaml-lsp-server": "^1.10.5",
-      "@opam/bisect_ppx": "^2.8.1",
-      "@opam/ppx_jane": "*",
-      "@opam/alcotest": "*",
-      "@opam/qcheck": "*",
-      "@opam/qcheck-alcotest": "*",
-      "@opam/patdiff": "*"
+    "@opam/easy-format": "1.3.2",
+    "@opam/merlin": "*",
+    "@opam/ocamlformat": "^0.21",
+    "@opam/ocaml-lsp-server": "^1.10.5",
+    "@opam/bisect_ppx": "^2.8.1",
+    "@opam/ppx_jane": "*",
+    "@opam/alcotest": "*",
+    "@opam/patdiff": "*",
+    "@opam/qcheck": "*",
+    "@opam/qcheck-alcotest": "*"
   }
-
 }
