refactor: Rename cast_cic module to ast

--- a/lib/kernel/dune
+++ b/lib/kernel/dune
@@ -1,6 +1,6 @@
 (library
  (name kernel)
- (modules std cast_cic context typing reduction)
+ (modules std ast context typing reduction)
  (preprocess
    (pps bisect_ppx))
  (libraries parsing))
