refactor: Extract ID to own common module

--- a/lib/cast_cic/dune
+++ b/lib/cast_cic/dune
@@ -3,4 +3,4 @@
  (modules std ast context typing reduction)
  (preprocess
    (pps bisect_ppx))
- (libraries parsing))
+ (libraries parsing common))
