--- a/lib/parsing/dune
+++ b/lib/parsing/dune
@@ -5,4 +5,5 @@
 
 (library
  (name parsing)
- (modules parser lexer ast lex_and_parse))
+ (modules parser lexer ast lex_and_parse)
+ (libraries common))
