--- a/lib/cast_cic/dune
+++ b/lib/cast_cic/dune
@@ -1,6 +1,6 @@
 (library
  (name cast_cic)
- (modules std ast context typing reduction)
+ (modules ast typing reduction)
  (preprocess
    (pps bisect_ppx))
  (libraries parsing common))
