refactor: Move GCIC AST to kernel module

--- a/lib/cast_cic/dune
+++ b/lib/cast_cic/dune
@@ -3,4 +3,4 @@
  (modules ast typing reduction elaboration)
  (preprocess
    (pps bisect_ppx))
- (libraries parsing common gcic))
+ (libraries parsing common kernel))
