feat: Unicode notation using Sedlexer

--- a/lib/parsing/dune
+++ b/lib/parsing/dune
@@ -1,9 +1,9 @@
 (menhir
  (modules parser))
 
-(ocamllex lexer)
-
 (library
  (name parsing)
  (modules parser lexer ast lex_and_parse)
- (libraries common))
+ (libraries common sedlex menhirLib)
+ (preprocess
+  (pps sedlex.ppx)))
