--- a/test/parser/dune
+++ b/test/parser/dune
@@ -1,3 +1,3 @@
 (test
  (name test_parser)
- (libraries kernel parsing alcotest qcheck qcheck-alcotest))
+ (libraries common parsing alcotest qcheck qcheck-alcotest))
