--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-      - uses: actions/checkout@v3
+        uses: actions/checkout@v3
 
       - name: Use Node
         uses: actions/setup-node@v2
@@ -20,7 +20,7 @@ jobs:
           cache-key: ${{ hashFiles('esy.lock/index.json') }}
 
       - run: esy install 
-      
+
       - name: Format code
         run: esy dune build @fmt --auto-promote
       - name: Check for modified files
