--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -23,9 +23,12 @@ jobs:
 
       - name: Format code
         run: esy dune build @fmt --auto-promote
+
       - name: Check for modified files
+        if: always()
         id: git-check
         run: echo ::set-output name=modified::$(if git diff-index --quiet HEAD --; then echo "false"; else echo "true"; fi)
+        
       - name: Push changes
         if: steps.git-check.outputs.modified == 'true'
         run: |
