--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "coverage": "dune runtest --instrument-with=bisect_ppx --force",
     "report": "bisect-ppx-report html",
     "run": "dune exec gcic",
-    "format": "dune build @fmt --auto-promote"
+    "format": "dune build @fmt --auto-promote",
+    "update-errors": "sh updateErrorMsgs.sh"
   },
   "dependencies": {
     "ocaml": "4.13.x",
