config: Return esy scripts to direct dune usage
In some cases `esy b dune ...` fails (or throws an error message)
due to permissions denied. It's no very clear why, so we are
setting them back again to use dune directly (e.g. `esy dune ...`).

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "scripts": {
-    "make": "esy b dune build",
-    "watch": "esy b dune build -w",
-    "test": "esy b dune runtest",
-    "coverage": "esy b dune runtest --instrument-with=bisect_ppx --force",
-    "report": "esy b bisect-ppx-report html",
-    "run": "esy b dune exec gcic",
+    "make": "dune build",
+    "watch": "dune build -w",
+    "test": "dune runtest",
+    "coverage": "dune runtest --instrument-with=bisect_ppx --force",
+    "report": "bisect-ppx-report html",
+    "run": "dune exec gcic",
     "format": "dune build @fmt --auto-promote"
   },
   "dependencies": {
