--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "coverage": "dune runtest --instrument-with=bisect_ppx --force",
     "report": "bisect-ppx-report html",
     "run": "dune exec gcic",
-    "format": "dune build @fmt --auto-promote"
+    "format": "dune build @fmt --auto-promote",
+    "update-parser-errors": "sh lib/parsing/update_error_msgs.sh"
   },
   "dependencies": {
     "ocaml": "4.13.x",
