--- a/lib/cast_cic/dune
+++ b/lib/cast_cic/dune
@@ -1,6 +1,6 @@
 (library
  (name cast_cic)
- (modules ast typing reduction elaboration context)
+ (modules ast typing reduction elaboration)
  (preprocess
   (pps bisect_ppx))
  (libraries common kernel))
