--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@opam/sedlex": "*"
   },
   "devDependencies": {
-    "@opam/easy-format": "1.3.2",
+    "@opam/fmt": "^0.9.0",
     "@opam/merlin": "*",
     "@opam/ocamlformat": "^0.21",
     "@opam/ocaml-lsp-server": "^1.10.5",
