feat: Add command to change max fuel setting and Config module (#11)

--- a/lib/cast_cic/dune
+++ b/lib/cast_cic/dune
@@ -3,4 +3,4 @@
  (modules ast typing reduction elaboration declarations)
  (preprocess
   (pps bisect_ppx))
- (libraries common kernel))
+ (libraries common kernel config))
