--- a/lib/common/dune
+++ b/lib/common/dune
@@ -1,6 +1,6 @@
 (library
  (name common)
- (modules id std declarations)
+ (modules id std declarations gCIC castCIC)
  (libraries fmt)
  (preprocess
   (pps bisect_ppx)))
