--- a/lib/dune
+++ b/lib/dune
@@ -1,6 +1,6 @@
 (library
  (name gcic)
- (libraries parsing kernel cast_cic vernac config)
+ (libraries parsing config reduction typing elaboration stdio)
  (preprocess
   (pps bisect_ppx))
- (modules main))
+ (modules main castCIC))
