--- a/test/cast_cic/dune
+++ b/test/cast_cic/dune
@@ -1,3 +1,3 @@
 (test
  (name test_cast_cic)
- (libraries cast_cic common alcotest qcheck qcheck-alcotest))
+ (libraries gcic common alcotest qcheck qcheck-alcotest))
