Change exec to use new modules

--- a/lib/dune
+++ b/lib/dune
@@ -1,14 +1,6 @@
 (library
  (name gcic)
- (libraries
-  parsing
-  kernel
-  cast_cic
-  vernac
-  config
-  reduction
-  typing
-  elaboration)
+ (libraries parsing kernel vernac config reduction typing elaboration)
  (preprocess
   (pps bisect_ppx))
- (modules main pipeline))
+ (modules main castCIC))
