--- a/lib/vernac/dune
+++ b/lib/vernac/dune
@@ -1,6 +1,6 @@
 (library
  (name vernac)
- (libraries kernel cast_cic common stdio fmt)
+ (libraries kernel common stdio fmt)
  (preprocess
   (pps bisect_ppx))
- (modules command exec))
+ (modules command))
