--- a/test/dune
+++ b/test/dune
@@ -1,11 +1,3 @@
 (test
  (name test_gcic)
- (libraries
-  gcic
-  common
-  parsing
-  vernac
-  cast_cic
-  alcotest
-  qcheck
-  qcheck-alcotest))
+ (libraries gcic common parsing vernac alcotest qcheck qcheck-alcotest))
