--- a/lib/parsing/dune
+++ b/lib/parsing/dune
@@ -8,8 +8,8 @@
 
 (library
  (name parsing)
- (modules parser lexer ast lex_and_parse parserMessages)
- (libraries common sedlex menhirLib kernel vernac)
+ (modules parser lexer ast lex_and_parse parserMessages command)
+ (libraries common sedlex menhirLib kernel)
  (preprocess
   (pps sedlex.ppx)))
 
