--- a/lib/parsing/dune
+++ b/lib/parsing/dune
@@ -9,7 +9,7 @@
 (library
  (name parsing)
  (modules parser lexer ast lex_and_parse parserMessages command)
- (libraries common sedlex menhirLib kernel)
+ (libraries common config sedlex menhirLib)
  (preprocess
   (pps sedlex.ppx)))
 
